# ahoy

./: .gitignore  Cargo.toml  Info.plist  README.md  install.sh  lefthook.yml  uninstall.sh
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
Ahoy.app/Contents/: Info.plist
Ahoy.app/Contents/MacOS/: ahoy-notify
Ahoy.app/Contents/Resources/: AppIcon.icns
Ahoy.app/Contents/_CodeSignature/: CodeResources
ahoy-hooks/.claude-plugin/: plugin.json
ahoy-hooks/hooks/: hooks.json
resources/macos/: Info.plist  rs.ahoy.daemon.plist
src/: config.rs  lib.rs  main.rs
src/client/: logs.rs  message.rs  mod.rs  send.rs  status.rs
src/daemon/: mod.rs  server.rs
src/install/: claude.rs  install.rs  mod.rs  status.rs  uninstall.rs
src/notify/: linux.rs  macos.rs  mod.rs  windows.rs
src/service/: linux.rs  macos.rs  mod.rs
swift/: .gitignore  Info.plist  Makefile  ahoy-notify.swift
tests/: claude_install_test.rs
tests/fixtures/hook_data/: permission_prompt.json  stop_hook.json
tests/fixtures/settings/: with_ahoy.json
tests/fixtures/transcripts/: array_content.jsonl  multiline.jsonl  simple.jsonl
