[package]
name = "ahoy"
version = "0.1.0"
edition = "2024"
description = "Cross-platform notification daemon for LLM coding agents"
license = "MIT"
repository = "https://github.com/raiderrobert/ahoy"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError"] }
objc2-user-notifications = "0.3"
block2 = "0.6"
