[package]
name = "ahoy"
version = "0.1.0"
edition = "2024"
description = "Cross-platform notification daemon for LLM coding agents"
license = "MIT"
repository = "https://github.com/raiderrobert/ahoy"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"


[dev-dependencies]
tempfile = "3.12"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3"
